LDEV-3479: Use extra dialog buttons in Add Single Activity lesson screen. Fix cancelling of closing an unsaved LD in Flashless Authoring. Confirm if the user wants to close unsaved Activity Authoring. Remove Collapse button from extra dialog buttons.

--- a/lams_monitoring/web/css/monitorLesson.css
+++ b/lams_monitoring/web/css/monitorLesson.css
@@ -9,20 +9,8 @@ div#tabs {
 	padding: 0px;
 }
 
-div#tabs ul li a,a#closeButton {
+div#tabs ul li a {
 	border-bottom: none;
-}
-
-a#closeButton {
-	position: absolute;
-	right: 10px;
-	top: 11px;
-	width: 19px;
-	height: 18px;
-}
-
-a#closeButton span {
-	background-color: #D0E5F5;
 }
 
 .errorMessage {
